--- a/jobs/link-prediction/worker/Dockerfile
+++ b/jobs/link-prediction/worker/Dockerfile
@@ -4,7 +4,7 @@ USER root
 ADD app /app
 ADD src /usr/src
 
-RUN python3 -m pip install /usr/src/requirements.txt
+RUN python3 -m pip install -r /usr/src/requirements.txt
 RUN cd /usr/src/grl && python3 -m pip install -e .
 RUN cd /usr/src/sparse2dense && python3 -m pip install -e .
 
