--- a/requirements.txt
+++ b/requirements.txt
@@ -4,6 +4,7 @@ matplotlib==3.4.2
 numpy
 pytest==6.1.1
 python-igraph==0.9.6
-scipy==1.7.0
 ray
+scipy==1.7.0
+scikit-learn==0.24.2
 tensorflow==2.5.0
