add version number to readme

--- a/.bumpversion.cfg
+++ b/.bumpversion.cfg
@@ -4,6 +4,8 @@ commit = True
 tag = True
 tag_name = {new_version}
 
+[bumpversion:file:README.md]
+
 [bumpversion:file:setup.py]
 
 [bumpversion:file:grl/__init__.py]
